2007-03-13  Brian Bidulock  <bidulock@openss7.org>

	* src/test/x400p-ss7/test-x400p.c: test case timing tweaks

	* src/modules/x400p-ss7/sl_x400p.c: add support for DS2156 chip
	* src/modules/x400p-ss7/sl_x400p.c: remove extraneous newlines
	* src/modules/x400p-ss7/sl_x400p.c: bug fixes for PR x400p-ss7/5766

2007-03-12  Brian Bidulock  <bidulock@openss7.org>

	* src/modules/x400p-ss7/sl_x400p.c: print more info on errors

	* src/test/inet/test-tcpc.c: rationalize to sctp package
	* src/test/inet/test-tcps.c: rationalize to sctp package
	* src/test/inet/test-udpc.c: rationalize to sctp package
	* src/test/inet/test-udps.c: rationalize to sctp package

	* lib32/Makefile.am: corrections
	* src/test/inet/test-tcpc.c: corrections
	* src/test/x400p-ss7/test-x400p.c: corrections

	* doc/man/man8/test-m2pa.8.man: updates
	* doc/man/man8/test-tcpc.8.man: updates
	* doc/man/man8/test-tcps.8.man: updates
	* doc/man/man8/test-udpc.8.man: updates
	* doc/man/man8/test-udps.8.man: updates

	* doc/man/man8/test-m2pa.8.man: boosted default port 10000->18000

	* src/test/inet/test-inet_tcp.c: boosted default port 10000->18000
	* src/test/inet/test-inet_udp.c: boosted default port 10000->18000
	* src/test/inet/test-inet_sctp.c: boosted default port 10000->18000
	* src/test/inet/test-sctp.c: boosted default port 10000->18000
	* src/test/inet/test-sctp_n.c: boosted default port 10000->18000
	* src/test/inet/test-sctp_nc.c: boosted default port 10000->18000
	* src/test/inet/test-sctp_ns.c: boosted default port 10000->18000
	* src/test/inet/test-sctp_t.c: boosted default port 10000->18000
	* src/test/inet/test-tcpc.c: boosted default port 10000->18000
	* src/test/inet/test-tcps.c: boosted default port 10000->18000
	* src/test/inet/test-udpc.c: boosted default port 10000->18000
	* src/test/inet/test-udps.c: boosted default port 10000->18000
	* src/test/m2pa/test-m2pa.c: boosted default port 10000->18000
	* src/test/sctp/test-sctp_n.c: boosted default port 10000->18000