@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo tw=100 nocin nosi
 @c =========================================================================
 @c
-@c @(#) $Id: bugs.texi,v 0.9.2.5 2007/03/13 19:12:25 brian Exp $
+@c @(#) $Id: bugs.texi,v 0.9.2.6 2007/03/14 05:39:25 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -53,11 +53,18 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2007/03/13 19:12:25 $ by $Author: brian $
+@c Last Modified $Date: 2007/03/14 05:39:25 $ by $Author: brian $
 @c
 @c =========================================================================
 
 @table @code
+@item 004.  2007-03-13T23:36:37-0600 (@command{x400p-ss7/5766})
+
+Older chips were not being recognized correctly either.  Reflected device table and a few missing
+break statements was the cause.
+
+@emph{*fixed*} in @command{strss7-0.9a.6}
+
 @item 003.  2007-03-13T02:40:38-0600 (@command{x400p-ss7/5766})
 
 It appears that V401PE cards were almost loading (configuring, mapping, downloading firmware) but
