@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo nocin nosi tw=100
 @c =========================================================================
 @c
-@c @(#) $Id: news.texi,v 0.9.2.22 2007/03/14 04:16:05 brian Exp $
+@c @(#) $Id: news.texi,v 0.9.2.23 2007/03/14 05:39:25 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -53,7 +53,7 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2007/03/14 04:16:05 $ by $Author: brian $
+@c Last Modified $Date: 2007/03/14 05:39:25 $ by $Author: brian $
 @c
 @c =========================================================================
 
@@ -95,6 +95,11 @@ distributions.
 Major features since the last public release are as follows:
 
 @itemize -
+@item
+Corrected support for the DS2152/21352/21552/2154/21352/21555 chips present in older V400P cards.
+(See @uref{http://www.openss7.org/codefiles/@value{PACKAGE}-@value{VERSION}/BUGS}
+in the release for more information.)
+
 @item
 Support for the DS2156 chip present in recent V401PE cards.
 (See @uref{http://www.openss7.org/codefiles/@value{PACKAGE}-@value{VERSION}/BUGS}
