@@ -1,3 +1,7 @@
+2007-03-14  Brian Bidulock  <bidulock@openss7.org>
+
+	* src/modules/x400p-ss7/sl_x400p.c: corrections for older chips
+
 2007-03-13  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/test/x400p-ss7/test-x400p.c: test case timing tweaks
